--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                     -->
         <div class="header-grid-container">
             <!-- header logo -->
-            <div class="header-logo-container">
+            <!-- <div class="header-logo-container">
                 <a href="https://karstenmonteiro.github.io"><img class="header-logo" src="/imgs/logo.webp" alt="kmDev logo"></a>
-            </div>
+            </div> -->
             <!-- header titles -->
             <div class="header-titles-grid-container">
                 <div class="header-title">
